crates/tapir-script/compiler/src/snapshots/compiler__grammar_test__snapshot_failures@functions.tapir.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/functions.tapir
---
Error: Unexpected token KeywordInt, expected one of "{", "->"
   ╭─[ functions.tapir:1:32 ]
   │
 1 │ fn my_function_without_arrow() int {
   │                                ─┬─  
   │                                 ╰─── Unexpected token
───╯
Error: Unexpected token RParen, expected one of ":"
   ╭─[ functions.tapir:5:36 ]
   │
 5 │ fn my_function_with_types_for_arg(x) {}
   │                                    ┬  
   │                                    ╰── Unexpected token
───╯
Error: 'not_real' is not a valid type, must be one of fix, bool or int
   ╭─[ functions.tapir:7:23 ]
   │
 7 │ fn not_a_real_type(x: not_real) {}
   │                       ────┬───  
   │                           ╰───── Unknown type
───╯
